
 - Fixnums and short-floats were compared using the "float" C type. This led to
   loss of precision and caused
	 (= (1+ (ceiling (rational -3.781832e7))) -3.781832e7) => T

 - Keyword arguments in a type defined with DEFTYPE, for which a default value
   is not given, default to '*. Also the DEFTYPE form are enclosed in a block
   with the name of the type.

 - The syntax of #\: can now be changed.

 - Adjusting displaced bit-vectors failed to take the displace-offset into
   account.

* ANSI compatibility:

 - Several functions that signaled type-errors did not set the right values
   on the field TYPE-ERROR-EXPECTED-TYPE. We now use the following types:
	* valid function names => (SATISFIES EXT:VALID-FUNCTION-NAME-P)
	* proper list	       => PROPER-LIST = (OR (CONS T PROPER-LIST) NULL)
	* positive fixnum      => (INTEGER 0 MOST-POSITIVE-FIXNUM)
	* nonnegative integer  => (INTEGER 0 *)
	* index in a seq       => (INTEGER 0 L) where L is (1- (length sequence))

 - (COMPLEX *) is now recognized as valid type identifier by subtypep.

 - TYPE-OF now returns more precise type names, so that if (TYPE-OF x) = t1 and
   (TYPEP x t2) = T then (SUBTYPEP t1 t2) = T.

 - MAKE-PATHNAME now signals ordinary errors when the arguments do not have
   the required type, but signals a file error when it finds something like
   a wrong directory (i.e. '(:ABSOLUTE :UP)).

 - Pathnames which contain :BACK in the directory, now print as unreadable
   objects, instead of signaling an error when printing.

 - Declaration names cannot be used to define new type names and viceversa.

 - #\Space has constituent trait "invalid".

 - DEFINE-SETF-EXPANDER encloses the form in an implicit block with the name of
   the SETF function.

* New features:

 - Added function si:rmdir (M. Pasternacki)

 - There are now specialized arrays for 32 or 64 bits data, depending on the
   size of words in the platform.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***